<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvMensajeBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeSaludo"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="70px"
        app:layout_constraintBottom_toTopOf="@+id/rgSemana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSemana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/rblunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia1"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbmartes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia2"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbmiercoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia3"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbjueves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia4"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbviernes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia5"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbsabado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia6"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbdomingo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadDia7"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>